--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">                                            
 <head>
    <title>atruly</title>
     <meta charset="UTF-8">
@@ -12,6 +12,25 @@
 <body>
    <div class="wrapper">
       <header class="header">
+         <div class="header__content">
+            <div class="container">
+               <div class="header__body">
+                  <a href="#" class="header__logo">
+                     <img src="img/logo.svg" alt="">
+                  </a>
+                  <div class="header__menu menu">
+                     <div class="menu__icon icon-menu"><span></span><span></span><span></span></div>
+                     <nav class="menu__body">
+                        <ul class="menu__list">
+                           <li><a href="" class="menu__link">Me<span>n</span>u</a></li>
+                           <li><a href="" class="menu__link">Me<span>n</span>u</a></li>
+                           <li><a href="" class="menu__link">Me<span>n</span>u</a></li>
+                        </ul>
+                     </nav>
+                  </div>
+               </div>
+            </div>
+         </div>
       </header>
 
       <main class="page">
