--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
-    <link rel="stylesheet" href="style/fonts.css">
+    <link rel="stylesheet" href="style/iconfonts.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -34,9 +34,52 @@
       </header>
 
       <main class="page">
+         <section class="truly">
+            <div class="truly__body">
+               <div class="truly__main">
+                  <h1 class="truly__title">A truly <span>text</span>inspiring</h1>
+                  <div class="truly__buttons">
+                     <a href="" class="truly__btn"></a>
+                     <a href="" class="truly__btn"></a>
+                  </div>
+               </div>
+               <div class="truly__slider"></div>
+            </div>
+         </section>
       </main>
 
       <footer class="footer">
+         <div class="container">
+            <div class="footer__body">
+               <div class="footer__row">
+                  <div class="footer__column column-footer">
+                     <h3 class="column-footer__headline">headline</h3>
+                     <ul class="column-footer__list">
+                        <li></li><a href="" class="column-footer__link">important Link</a></li>
+                        <li></li><a href="" class="column-footer__link">important Link</a></li>
+                        <li></li><a href="" class="column-footer__link">important Link</a></li>
+                        <li></li><a href="" class="column-footer__link">important Link important Link</a></li>
+                     </ul>
+                  </div>
+                  <div class="footer__column column-footer">
+                     <a href="" class="column-footer__brand">
+                        <img src="img/images/footer/logo-footer.svg" alt="">
+                     </a>
+                     <ul class="column-footer__list">
+                        <li></li><a href="" class="column-footer__link">important Link important Link</a></li>
+                        <li></li><a href="" class="column-footer__link">important Link</a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="footer__column footer__column_b column-footer">
+                  <div class="column-footer__social">
+                     <a href="" class="column-footer__icon _icon-linkedin"></a>
+                     <a href="" class="column-footer__icon _icon-twitter"></a>
+                     <a href="" class="column-footer__icon _icon-telegram"></a>
+                  </div>              
+               </div>
+            </div>              
+         </div>
       </footer>
    </div>
 
